logs/2023-12-03-21-56-25/clientbuild.log
main.c: In function ‘main’:
main.c:199:54: error: expected ‘)’ before ‘PATHNAME’
  199 |                                         printf("257 "PATHNAME" created.\n");
      |                                               ~      ^~~~~~~~
      |                                                      )
ftpClient.c: In function ‘ftpclient_read_cmd’:
ftpClient.c:59:9: warning: implicit declaration of function ‘read_input’; did you mean ‘readlinkat’? [-Wimplicit-function-declaration]
   59 |         read_input(buf,size);
      |         ^~~~~~~~~~
      |         readlinkat
